--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,13 +1,73 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+a {
+  text-decoration: none;
+}
+
+.comments {
+  width: 500px;
+  max-width: 80%;
+  background: #fff;
+  padding: 20px 30px;
+  border-radius: 5px;
+}
+
+.comments-form ul {
+  list-style: none;
+  margin-left: -40px;
+}
+.comments-form ul li {
+  margin-bottom: 15px;
+}
+.comment,
+.back {
+  border: 0;
+  border-radius: 5px;
+  padding: 10px 15px;
+  background: #448ef6;
+  color: #fff;
+  font-family: "Quicksand";
+  font-weight: bold;
+}
+.back {
+  margin-bottom: 2rem;
+}
+.comments-form ul li input[type="text"],
+.comments-form ul li textarea {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #f5f5f5;
+}
+.comments-form ul li input[type="text"]::-moz-placeholder,
+.comments-form ul li textarea::-moz-placeholder {
+  font-family: "Quicksand", sans-serif;
+}
+.comments-form ul li input[type="text"]:-ms-input-placeholder,
+.comments-form ul li textarea:-ms-input-placeholder {
+  font-family: "Quicksand", sans-serif;
+}
+.comments-form ul li input[type="text"]::placeholder,
+.comments-form ul li textarea::placeholder {
+  font-family: "Quicksand", sans-serif;
+}
+.comments-form ul li input[type="text"]:focus,
+.comments-form ul li textarea:focus {
+  background: #fff;
+}
+.comments-form ul li textarea {
+  width: 80%;
+  height: 80px;
+  resize: none;
 }
