--- a/app/src/index.css
+++ b/app/src/index.css
@@ -14,6 +14,9 @@ code {
 a {
   text-decoration: none;
 }
+.postlist {
+  margin-top: 2rem;
+}
 
 .comments {
   width: 500px;
@@ -70,4 +73,58 @@ a {
   width: 80%;
   height: 80px;
   resize: none;
+}
+
+/* Search Bar */
+
+.searchwrapper {
+  width: 90%;
+}
+.searchbox {
+  background-color: #fff;
+  padding: 7px 76px 7px 40px;
+  border: 2px solid #999999;
+  border-radius: 20px;
+}
+.searchbox [class*="col-"] {
+  padding: 0px;
+}
+.searchbox .col-md-4,
+.searchbox .col-md-2 {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+.searchbox .form-control {
+  border-color: transparent;
+  border-right: solid 1px rgba(0, 0, 0, 0.1);
+}
+.searchbox select.form-control {
+  border-right: solid 1px transparent;
+}
+.searchbox .form-control:focus {
+  outline: 0;
+}
+.searchbox .btn {
+  border-radius: 40px;
+  padding: 20px 80px 20px 40px;
+  margin-left: 2rem;
+}
+
+@media (max-width: 767px) {
+  .searchbox .btn {
+    width: 100%;
+  }
+  .searchbox {
+    padding: 20px 40px;
+  }
+  .searchbox .form-control {
+    border-color: transparent;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.1);
+  }
+  .searchbox select.form-control {
+    border-bottom: solid 1px transparent;
+  }
+  .searchbox .btn {
+    margin-left: 0;
+  }
 }
